# sim-audio-daw

./: .gitignore  BROCHURE.md  CONTRIBUTING.md  Cargo.toml  README.md  features.toml  release-plz.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
crates/sim-lib-audio-dsp/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-audio-dsp/recipes/: book.toml
crates/sim-lib-audio-dsp/recipes/01-basics/: chapter.toml
crates/sim-lib-audio-dsp/recipes/01-basics/offline-chain/: purpose.md  recipe.toml  setup.siml
crates/sim-lib-audio-dsp/recipes/30-agents/: chapter.toml
crates/sim-lib-audio-dsp/recipes/30-agents/a30-020-audio-processing/: expected.txt  purpose.md  recipe.toml  setup.siml
crates/sim-lib-audio-dsp/src/: citizen.rs  common.rs  cookbook.rs  cookbook_runtime.rs  delay.rs  dynamics.rs  filter.rs  fixture.rs  gain.rs  lib.rs  modulation.rs  oversampling.rs  runtime.rs  smoothing.rs  tests.rs
crates/sim-lib-audio-dsp/tests/: overlap_baseline.rs
crates/sim-lib-audio-graph-core/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-audio-graph-core/recipes/: book.toml
crates/sim-lib-audio-graph-core/recipes/01-basics/: chapter.toml
crates/sim-lib-audio-graph-core/recipes/01-basics/copy-node/: purpose.md  recipe.toml  setup.siml
crates/sim-lib-audio-graph-core/src/: arena.rs  block.rs  bridge.rs  bridge_tests.rs  citizen.rs  cookbook.rs  graph.rs  lib.rs  patch.rs  port.rs  processor.rs  tests.rs
crates/sim-lib-audio-graph-live/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-audio-graph-live/recipes/: book.toml
crates/sim-lib-audio-graph-live/recipes/01-basics/: chapter.toml
crates/sim-lib-audio-graph-live/recipes/01-basics/live-config/: purpose.md  recipe.toml  setup.siml
crates/sim-lib-audio-graph-live/src/: cookbook.rs  event.rs  lib.rs  profile.rs  queue.rs  runner.rs  runner_types.rs  runtime.rs  site.rs  site_tests.rs  tests.rs  transport.rs
crates/sim-lib-audio-graph-live/src/tests/: diagnostics.rs  mod.rs  runner.rs
crates/sim-lib-plugin-clap/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-plugin-clap/recipes/: book.toml
crates/sim-lib-plugin-clap/src/: adapter.rs  cookbook.rs  descriptor.rs  event.rs  lib.rs  native.rs  runtime.rs  tests.rs
crates/sim-lib-plugin-clap/tests/: overlap_baseline.rs
crates/sim-lib-plugin-core/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-plugin-core/recipes/: book.toml
crates/sim-lib-plugin-core/recipes/01-basics/: chapter.toml
crates/sim-lib-plugin-core/recipes/01-basics/gain-plugin/: purpose.md  recipe.toml  setup.siml
crates/sim-lib-plugin-core/src/: adapter.rs  capability.rs  citizen.rs  cookbook.rs  descriptor.rs  lib.rs  runtime.rs  state.rs  tests.rs
crates/sim-lib-plugin-lv2/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-plugin-lv2/recipes/: book.toml
crates/sim-lib-plugin-lv2/recipes/01-basics/: chapter.toml
crates/sim-lib-plugin-lv2/recipes/01-basics/lv2-gain/: purpose.md  recipe.toml  setup.siml
crates/sim-lib-plugin-lv2/src/: adapter.rs  cookbook.rs  descriptor.rs  lib.rs  native.rs  runtime.rs  state.rs  tests.rs
crates/sim-lib-plugin-vst3/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-plugin-vst3/recipes/: book.toml
crates/sim-lib-plugin-vst3/src/: adapter.rs  cookbook.rs  descriptor.rs  event.rs  lib.rs  runtime.rs  scope.rs  tests.rs
crates/sim-lib-plugin-wasm/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-plugin-wasm/recipes/: book.toml
crates/sim-lib-plugin-wasm/recipes/01-basics/: chapter.toml
crates/sim-lib-plugin-wasm/recipes/01-basics/wasm-gain/: purpose.md  recipe.toml
crates/sim-lib-plugin-wasm/src/: abi.rs  lib.rs  limits.rs  loader.rs  native_fallback.rs  processor.rs  router.rs  tests.rs
crates/sim-lib-plugin-wasm/src/fixtures/: gain.wat
crates/sim-lib-plugin-wasm/src/processor/: host.rs  manifest.rs
crates/sim-lib-stream-alsa/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-stream-alsa/recipes/: book.toml
crates/sim-lib-stream-alsa/recipes/01-basics/: chapter.toml
crates/sim-lib-stream-alsa/recipes/01-basics/modeled-alsa/: purpose.md  recipe.toml
crates/sim-lib-stream-alsa/src/: backend.rs  bridge.rs  lib.rs  model.rs  runtime.rs  site.rs  tests.rs
crates/sim-lib-stream-asio/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-stream-asio/recipes/: book.toml
crates/sim-lib-stream-asio/src/: backend.rs  bridge.rs  lib.rs  model.rs  runtime.rs  tests.rs
crates/sim-lib-stream-coreaudio/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-stream-coreaudio/recipes/: book.toml
crates/sim-lib-stream-cpal/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-stream-cpal/recipes/: book.toml
crates/sim-lib-stream-cpal/recipes/01-basics/: chapter.toml
crates/sim-lib-stream-cpal/recipes/01-basics/cpal-hardware-smoke/: expected.txt  purpose.md  recipe.toml  setup.siml
crates/sim-lib-stream-cpal/recipes/01-basics/modeled-site/: purpose.md  recipe.toml  setup.siml
crates/sim-lib-stream-cpal/src/: backend_resolution.rs  cookbook.rs  lib.rs  model.rs  native.rs  provider_modeled.rs  tests.rs
crates/sim-lib-stream-jack/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-stream-jack-provider/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-stream-jack-provider/recipes/: book.toml
crates/sim-lib-stream-jack-provider/recipes/01-basics/: chapter.toml
crates/sim-lib-stream-jack-provider/recipes/01-basics/jack-hardware-smoke/: expected.txt  purpose.md  recipe.toml  setup.siml
crates/sim-lib-stream-jack-provider/recipes/01-basics/jack-provider-load/: expected.txt  purpose.md  recipe.toml  setup.siml
crates/sim-lib-stream-jack-provider/recipes/01-basics/loadable-modeled-provider/: purpose.md  recipe.toml  setup.siml
crates/sim-lib-stream-jack-provider/src/: cookbook.rs  entry.rs  lib.rs  model.rs  native.rs  tests.rs
crates/sim-lib-stream-pipewire/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-stream-portaudio/: BROCHURE.md  Cargo.toml  README.md
docs/agents/: card-index.json  cards.jsonl
docs/humans/: README.md
xtask/src/: main.rs  workspace_coverage.rs
(+53 files in other folders)
