
[workspace]
resolver = "3"
members = [
  "crates/sim-lib-audio-dsp",
  "crates/sim-lib-audio-graph-core",
  "crates/sim-lib-audio-graph-live",
  "crates/sim-lib-plugin-clap",
  "crates/sim-lib-plugin-core",
  "crates/sim-lib-plugin-lv2",
  "crates/sim-lib-plugin-wasm",
  "crates/sim-lib-plugin-vst3",
  "crates/sim-lib-stream-cpal",
  "xtask",
]
exclude = [
  "crates/sim-lib-stream-jack-provider",
]

[workspace.package]
edition = "2024"
license = "MPL-2.0"
repository = "https://github.com/sim-nest/sim-audio-daw"
homepage = "https://github.com/sim-nest/sim-audio-daw"

[workspace.lints.rust]
unsafe_code = "forbid"
