[package]
name = "sim-lib-stream-cpal"
version = "0.1.1"
edition = "2024"
license = "MPL-2.0"
description = "cpal stream-host adapter with a modeled default lane and gated hardware support."
readme = "README.md"
publish = true
repository = "https://github.com/sim-nest/sim-audio-daw"
homepage = "https://github.com/sim-nest/sim-audio-daw"

[features]
default = ["model"]
model = []
cpal-hardware = ["dep:cpal"]

[dependencies]
cpal = { version = "0.15", optional = true }
sim-kernel = { version = "0.1.0" }
sim-lib-stream-core = { version = "0.1.0" }
sim-lib-stream-host = { version = "0.1.0" }
