[package]
name = "sim-lib-stream-jack-provider"
version = "0.1.1"
edition = "2021"
license = "MPL-2.0"
description = "JACK audio placement provider with a modeled default lane and gated hardware support."
readme = "README.md"
publish = true
repository = "https://github.com/sim-nest/sim-audio-daw"
homepage = "https://github.com/sim-nest/sim-audio-daw"

[features]
default = ["model"]
model = []
jack-hardware = ["dep:jack"]

[dependencies]
sim-cookbook = { version = "0.1.0" }
jack = { version = "0.11", optional = true }
sim-kernel = { version = "0.1.0" }
sim-lib-stream-core = { version = "0.1.0" }
sim-lib-stream-host = { version = "0.1.0" }

[dev-dependencies]
sim-kernel = { version = "0.1", features = ["test-support"] }

[build-dependencies]
sim-cookbook = { version = "0.1.0" }
